--- a/server/server.cabal
+++ b/server/server.cabal
@@ -26,6 +26,7 @@ library
   exposed-modules:
       Lib
       Server
+      Server.API.AnswerAPI
       Server.API.QuestionAPI
       Server.API.Requests
       Server.Config
