--- a/server/server.cabal
+++ b/server/server.cabal
@@ -43,6 +43,7 @@ library
     , base >=4.7 && <5
     , bytestring
     , esqueleto
+    , exceptions
     , monad-logger
     , mtl
     , persistent
@@ -72,6 +73,7 @@ executable server
     , base
     , bytestring
     , esqueleto
+    , exceptions
     , monad-logger
     , mtl
     , persistent
@@ -103,6 +105,7 @@ test-suite server-test
     , base
     , bytestring
     , esqueleto
+    , exceptions
     , hspec
     , hspec-wai
     , hspec-wai-json
