--- a/server/package.yaml
+++ b/server/package.yaml
@@ -20,6 +20,7 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
+- rio
 - aeson
 - servant-server
 - servant
@@ -39,6 +40,12 @@ dependencies:
 - bytestring
 - esqueleto
 - exceptions
+- cryptonite
+
+default-extensions: 
+- NoImplicitPrelude
+- OverloadedStrings
+- RecordWildCards
 
 library:
   source-dirs: src
