--- a/server/server.cabal
+++ b/server/server.cabal
@@ -38,10 +38,15 @@ library
       Paths_server
   hs-source-dirs:
       src
+  default-extensions:
+      NoImplicitPrelude
+      OverloadedStrings
+      RecordWildCards
   build-depends:
       aeson
     , base >=4.7 && <5
     , bytestring
+    , cryptonite
     , esqueleto
     , exceptions
     , monad-logger
@@ -49,6 +54,7 @@ library
     , persistent
     , persistent-postgresql
     , persistent-template
+    , rio
     , servant
     , servant-options
     , servant-server
@@ -67,11 +73,16 @@ executable server
       Paths_server
   hs-source-dirs:
       app
+  default-extensions:
+      NoImplicitPrelude
+      OverloadedStrings
+      RecordWildCards
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       aeson
     , base
     , bytestring
+    , cryptonite
     , esqueleto
     , exceptions
     , monad-logger
@@ -79,6 +90,7 @@ executable server
     , persistent
     , persistent-postgresql
     , persistent-template
+    , rio
     , servant
     , servant-options
     , servant-server
@@ -99,11 +111,16 @@ test-suite server-test
       Paths_server
   hs-source-dirs:
       test
+  default-extensions:
+      NoImplicitPrelude
+      OverloadedStrings
+      RecordWildCards
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       aeson
     , base
     , bytestring
+    , cryptonite
     , esqueleto
     , exceptions
     , hspec
@@ -114,6 +131,7 @@ test-suite server-test
     , persistent
     , persistent-postgresql
     , persistent-template
+    , rio
     , servant
     , servant-options
     , servant-server
