--- a/server/package.yaml
+++ b/server/package.yaml
@@ -41,11 +41,15 @@ dependencies:
 - esqueleto
 - exceptions
 - cryptonite
+- jose
+- servant-auth
+- servant-auth-server
 
 default-extensions: 
 - NoImplicitPrelude
 - OverloadedStrings
 - RecordWildCards
+- DuplicateRecordFields 
 
 library:
   source-dirs: src
