--- a/server/server.cabal
+++ b/server/server.cabal
@@ -31,6 +31,8 @@ library
       Server.API.QuestionAPI
       Server.API.Requests
       Server.Config
+      Server.Core.Password
+      Server.Core.Types
       Server.Database.Model
       Server.Database.Queries
       Server.Database.Setup
@@ -42,6 +44,7 @@ library
       NoImplicitPrelude
       OverloadedStrings
       RecordWildCards
+      DuplicateRecordFields
   build-depends:
       aeson
     , base >=4.7 && <5
@@ -49,6 +52,7 @@ library
     , cryptonite
     , esqueleto
     , exceptions
+    , jose
     , monad-logger
     , mtl
     , persistent
@@ -56,6 +60,8 @@ library
     , persistent-template
     , rio
     , servant
+    , servant-auth
+    , servant-auth-server
     , servant-options
     , servant-server
     , text
@@ -77,6 +83,7 @@ executable server
       NoImplicitPrelude
       OverloadedStrings
       RecordWildCards
+      DuplicateRecordFields
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       aeson
@@ -85,6 +92,7 @@ executable server
     , cryptonite
     , esqueleto
     , exceptions
+    , jose
     , monad-logger
     , mtl
     , persistent
@@ -92,6 +100,8 @@ executable server
     , persistent-template
     , rio
     , servant
+    , servant-auth
+    , servant-auth-server
     , servant-options
     , servant-server
     , server
@@ -115,6 +125,7 @@ test-suite server-test
       NoImplicitPrelude
       OverloadedStrings
       RecordWildCards
+      DuplicateRecordFields
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       aeson
@@ -126,6 +137,7 @@ test-suite server-test
     , hspec
     , hspec-wai
     , hspec-wai-json
+    , jose
     , monad-logger
     , mtl
     , persistent
@@ -133,6 +145,8 @@ test-suite server-test
     , persistent-template
     , rio
     , servant
+    , servant-auth
+    , servant-auth-server
     , servant-options
     , servant-server
     , server
