--- a/server/server.cabal
+++ b/server/server.cabal
@@ -24,6 +24,7 @@ source-repository head
 
 library
   exposed-modules:
+      Doc
       Server
       Server.API.AnswerAPI
       Server.API.AuthAPI
@@ -61,6 +62,7 @@ library
     , servant
     , servant-auth
     , servant-auth-server
+    , servant-docs
     , servant-options
     , servant-server
     , text
@@ -101,6 +103,7 @@ executable server
     , servant
     , servant-auth
     , servant-auth-server
+    , servant-docs
     , servant-options
     , servant-server
     , server
@@ -146,6 +149,7 @@ test-suite server-test
     , servant
     , servant-auth
     , servant-auth-server
+    , servant-docs
     , servant-options
     , servant-server
     , server
