read db connection from environment variables

--- a/server/server.cabal
+++ b/server/server.cabal
@@ -33,6 +33,7 @@ library
       Server.Config
       Server.Core.Password
       Server.Core.Types
+      Server.Core.Utils
       Server.Database.Model
       Server.Database.Queries
       Server.Database.Setup
