add manual migration

--- a/server/package.yaml
+++ b/server/package.yaml
@@ -45,6 +45,7 @@ dependencies:
 - servant-auth
 - servant-auth-server
 - servant-docs
+- persistent-migration
 
 default-extensions: 
 - NoImplicitPrelude
