add deploy to heroky step to github action

--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -18,4 +18,14 @@ jobs:
 
       - name: Build Server 
         run: cd server && stack build 
+        
+      - name: Deploy to Heroku
+        uses: akhileshns/heroku-deploy@v3.12.12
+        with:
+          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+          heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
+          heroku_email: ${{ secrets.HEROKU_EMAIL }}
+          appdir: "server"
+          buildpack: "https://github.com/mfine/heroku-buildpack-stack"
+          branch: "servant"
 
