--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,25 +1,23 @@
 version: 2.1
 jobs:
   build:
-    working_directory: ~/server
     docker:
       - image: fpco/stack-build
     steps:
-      - checkout:
-          path: ./server
+      - checkout
       - restore_cache: 
           name: Restore Cache Dependencies
-          key: myapp-{{ checksum "stack.yaml" }}-{{ checksum "server.cabal" }}
+          key: myapp-{{ checksum "./server/stack.yaml" }}-{{ checksum "./server/server.cabal" }}
       - run:
           name: Resolve/Update Dependencies
-          command: stack setup
+          command: cd server && stack setup
       - run:
           name: Build
-          command: stack build
+          command: cd server && stack build
       - save_cache: 
           name: Cache Dependencies
-          key: myapp-{{ checksum "stack.yaml" }}-{{ checksum "server.cabal" }}
+          key: myapp-{{ checksum "./server/stack.yaml" }}-{{ checksum "./server/server.cabal" }}
           paths: 
             - "/root/.stack"
-            - ".stack-work"
+            - "./server/.stack-work"
 
