--- a/server/package.yaml
+++ b/server/package.yaml
@@ -57,7 +57,7 @@ library:
   source-dirs: src
 
 executables:
-  server:
+  run-app-server:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
