--- a/server/server.cabal
+++ b/server/server.cabal
@@ -77,7 +77,7 @@ library
     , warp
   default-language: Haskell2010
 
-executable server
+executable run-app-server
   main-is: Main.hs
   other-modules:
       Paths_server
